--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>音乐圣经管理后台</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="./static/moment.min.js"></script>
   </head>
   <body>
     <div id="app"></div>
